<resources>
    <string name="app_name">Cheers!</string>

    <string name="nav_beverages">Beverages</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_counters">Counters</string>
    <string name="nav_beverage_database">Beverage database</string>
    <string name="nav_about_app">About app</string>

    <string name="add_counter_menu_item">Add counter</string>
    <string name="delete_counter_menu_item">Delete counter</string>
    <string name="stop_counter_menu_item">Stop counter</string>
    <string name="edit_beverage_menu_item">Edit beverage</string>
    <string name="add_beverage_menu_item">Add beverage</string>
    <string name="search_menu_item">Search</string>
    <string name="clear_search_menu_item">Clear search</string>
    <string name="select_all_menu_item">Select all</string>
    <string name="delete_beverage_menu_item">Delete beverage</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="percent" translatable="false">%</string>
    <string name="liter" translatable="false">L</string>
    <string name="milliliter" translatable="false">ml</string>
    <string name="delete">Delete</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="pick">Pick</string>
    <string name="close">Close</string>

    <string name="beverage_beer">Beer</string>
    <string name="beverage_wine">Wine</string>
    <string name="beverage_shot">Shot</string>

    <string name="menu_header_text">Menu</string>

    <string name="dialog_new_counter_title">New counter</string>
    <string name="dialog_new_counter_name">Name</string>
    <string name="dialog_new_counter_alcohol">Alcohol</string>
    <string name="dialog_new_counter_volume">Volume</string>
    <string name="dialog_new_counter_incomplete_data">Name and volume must be filled</string>

    <string name="dialog_confirm_beverage_delete_title">Delete beverage \"%s\"?</string>

    <string name="dialog_confirm_counter_delete_title">Delete counter \"%s\"?</string>
    <plurals name="dialog_confirm_counter_delete_title_multiple">
        <item quantity="other">Delete %d counters?</item>
    </plurals>

    <string name="dialog_confirm_counter_stop_title">Stop counter \"%s\"?</string>
    <plurals name="dialog_confirm_counter_stop_title_multiple">
        <item quantity="other">Stop %d counters?</item>
    </plurals>

    <string name="dialog_edit_beverage_title">Edit beverage</string>

    <string name="dialog_edit_point_title">Edit point</string>

    <string name="about_app_author"><b>Author:</b> Jan Pejsar</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_build">Build</string>
    <string name="about_app_build_time">Build time</string>

    <string name="counter_recycler_view_empty_message">Click on the \"+\" symbol to add new counter</string>
    <string name="beverage_recycler_view_empty_message">Click on the \"+\" symbol to add new beverage</string>
    <string name="beverage_recycler_view_item_description_alcohol">Alcohol: %s%%</string>
    <string name="beverage_recycler_view_item_description_rest">Last counter: %sx %sL\nTotal: %sL</string>
    <string name="beverage_recycler_view_item_description_no_data">No counter for this beverage found</string>
    <string name="description_text_view_loading">Loading…</string>
    <string name="time_text_view_empty">00:00</string>
    <string name="beverage_name_text_view">Nothing selected</string>
</resources>