<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/beveragesFragment"
        android:title="@string/nav_beverages"
        android:icon="@drawable/beverages" />

    <item
        android:id="@+id/statisticsFragment"
        android:title="@string/nav_statistics"
        android:icon="@drawable/statistics" />

    <item
        android:id="@+id/countersFragment"
        android:title="@string/nav_counters"
        android:icon="@drawable/counters" />

    <item
        android:id="@+id/beverageDatabaseFragment"
        android:title="@string/nav_beverage_database"
        android:icon="@drawable/beverage_database" />

    <item
        android:id="@+id/aboutAppMenuItem"
        android:title="@string/nav_about_app"
        android:icon="@drawable/about_app" />

    <item
        android:id="@+id/beverageDatabaseFragmentNew"
        android:title="@string/nav_beverage_database"
        android:icon="@drawable/beverage_database" />
</menu>