<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/beveragesFragment">

    <fragment
        android:id="@+id/beveragesFragment"
        android:name="cz.johnyapps.cheers.fragments.BeverageCategoriesFragment"
        android:label="@string/nav_beverages"
        tools:layout="@layout/fragment_beverage_category" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="cz.johnyapps.cheers.fragments.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/countersFragment"
        android:name="cz.johnyapps.cheers.fragments.CountersFragment"
        android:label="@string/nav_counters"
        tools:layout="@layout/fragment_counters" />

    <fragment
        android:id="@+id/beverageDatabaseFragment"
        android:name="cz.johnyapps.cheers.fragments.BeverageDatabaseFragment"
        android:label="@string/nav_beverage_database"
        tools:layout="@layout/fragment_beverage_database" />

    <fragment
        android:id="@+id/beverageDatabaseFragmentNew"
        android:name="cz.johnyapps.cheers.fragments.BeverageDatabaseFragmentNew"
        android:label="@string/nav_beverage_database"
        tools:layout="@layout/fragment_beverage_database_new" />
</navigation>