<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Cheers.Small"
        android:padding="?spacingDefault"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/about_app_author" />

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Cheers.Small"
        android:paddingStart="?spacingDefault"
        android:paddingEnd="?spacingDefault"
        android:paddingBottom="?spacingDefault"
        app:layout_constraintTop_toBottomOf="@id/authorTextView"
        android:text="@string/about_app_build" />

    <TextView
        android:id="@+id/buildTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Cheers.Small"
        android:paddingStart="?spacingDefault"
        android:paddingEnd="?spacingDefault"
        android:paddingBottom="?spacingDefault"
        app:layout_constraintTop_toBottomOf="@id/versionTextView"
        android:text="@string/about_app_version" />

    <TextView
        android:id="@+id/buildTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Cheers.Small"
        android:paddingStart="?spacingDefault"
        android:paddingEnd="?spacingDefault"
        app:layout_constraintTop_toBottomOf="@id/buildTextView"
        android:text="@string/about_app_version" />
</androidx.constraintlayout.widget.ConstraintLayout>