<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_colorPrimary">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/minusTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/valueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:gravity="center"
            android:layout_weight="3"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="0" />

        <TextView
            android:id="@+id/plusTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/plus" />
    </LinearLayout>
</LinearLayout>